corrected wave evaluation errors: contrast from carousel button & filter selected

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,8 +102,8 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0 ;
+	background-color: #000000;
+	border: radius 25px; ;
 }
 .nav-pills .nav-link {
 	color: #000;
